Fix item spacing promotion

--- a/src/stylesheets/modules/_mod-promotion.scss
+++ b/src/stylesheets/modules/_mod-promotion.scss
@@ -47,6 +47,11 @@ $number-per-row-lg: 5;
 }
 
 @include media-breakpoint-up(lg) {
+  .mod-promotion {
+    > .container {
+      padding: 0 45px;
+    }
+  }
   .promo-item {
     max-width: (100% / $number-per-row-lg);
     flex: 0 0 (100% / $number-per-row-lg);
